added entries to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,17 @@
 *.o
+*.lo
+*.la
 *.d
 *.so
 *.so.*
-Galileo
-README.pf.md
-
-Upstream/
-Galileo/
+.project
+.cproject
+.settings
+*.deps
+*.dirstamp
+Makefile
+src/Makefile
+libtool
+config.log
+config.status
+src/.libs/
