--- a/.gitignore
+++ b/.gitignore
@@ -4,14 +4,14 @@
 *.d
 *.so
 *.so.*
-.project
-.cproject
-.settings
-*.deps
-*.dirstamp
+autom4te.cache
+.sublime-project
+.sublime-project.sublime-workspace
 Makefile
-src/Makefile
 libtool
 config.log
 config.status
-src/.libs/
+*.deps
+*.dirstamp
+*/**/Makefile
+*/**/.libs/
