--- a/configure.ac
+++ b/configure.ac
@@ -1,8 +1,13 @@
 dnl Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.59)
-AC_INIT(muzzley, 0.1)
-AC_PROG_CXX
+AC_INIT(muzzley, 0.1, pedro.figueiredo@muzzley.com)
+
+AC_CONFIG_MACRO_DIR([m4])
+AC_CONFIG_AUX_DIR([.])
+
+dnl Check for libraries
+AC_HAVE_LIBRARY(pthread)
 
 AC_CANONICAL_SYSTEM
 
@@ -10,6 +15,7 @@ dnl Initialize automake
 AM_INIT_AUTOMAKE([subdir-objects])
 
 dnl this allows us specify individual liking flags for each target
+AC_PROG_CXX
 AM_PROG_CC_C_O 
 
 dnl Initialize Libtool
