--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -84,7 +84,10 @@ subdir = src
 DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/Makefile.am \
 	$(top_srcdir)/depcomp $(nobase_pkginclude_HEADERS)
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
-am__aclocal_m4_deps = $(top_srcdir)/configure.ac
+am__aclocal_m4_deps = $(top_srcdir)/m4/libtool.m4 \
+	$(top_srcdir)/m4/ltoptions.m4 $(top_srcdir)/m4/ltsugar.m4 \
+	$(top_srcdir)/m4/ltversion.m4 $(top_srcdir)/m4/lt~obsolete.m4 \
+	$(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 mkinstalldirs = $(install_sh) -d
@@ -339,7 +342,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 lib_LTLIBRARIES = libmuzzley.la
 libmuzzley_la_LIBADD = -lpthread
-libmuzzley_la_CPPFLAGS = -std=c++0x -O3
+libmuzzley_la_CPPFLAGS = -std=c++0x
 libmuzzley_la_SOURCES = ./base/smart_ptr.cpp ./base/str_map.cpp ./log/log.cpp ./exceptions/InterruptedException.cpp ./exceptions/CastException.cpp ./exceptions/ParserEOF.cpp ./exceptions/ClosedException.cpp ./exceptions/AssertionException.cpp ./exceptions/NoAttributeNameException.cpp ./exceptions/SyntaxErrorException.cpp ./parsers/JSONLexer.cpp ./parsers/json.cpp ./parsers/JSONTokenizer.cpp ./parsers/JSONTokenizerLexer.cpp ./parsers/JSONParser.cpp ./text/ascii.cpp ./text/utf8.cpp ./text/manip.cpp ./text/url.cpp ./text/convert.cpp ./text/base64.cpp ./stream/SocketStreams.cpp ./resource/Client.cpp ./json/JSONArr.cpp ./json/JSONBool.cpp ./json/JSONStr.cpp ./json/JSONInt.cpp ./json/JSONDbl.cpp ./json/JSONElement.cpp ./json/JSONObj.cpp 
 nobase_pkginclude_HEADERS = base/str_map.h base/smart_ptr.h base/assert.h log/log.h exceptions/CastException.h exceptions/SyntaxErrorException.h exceptions/ParserEOF.h exceptions/AssertionException.h exceptions/NoAttributeNameException.h exceptions/ClosedException.h exceptions/InterruptedException.h parsers/JSONLexerimpl.h parsers/JSONTokenizerbase.h parsers/JSONinc.h parsers/JSONParser.h parsers/JSONTokenizerLexer.h parsers/JSONLexerbase.h parsers/JSONLexer.h parsers/json.h parsers/JSONTokenizer.h parsers/JSONTokenizerimpl.h text/convert.h text/manip.h stream/SocketStreams.h muzzley.h resource/Client.h json/JSONObj.h 
 all: all-am
