Changed muzzley::JSONObj hierarchy, now extends from *std::share_ptr*

--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,10 @@
 dnl Process this file with autoconf to produce a configure script.
 
+PACKAGE=muzzley
+VERSION=0.1.1
+
 AC_PREREQ(2.59)
-AC_INIT(muzzley, 0.1, pedro.figueiredo@muzzley.com)
+AC_INIT(muzzley, 0.1.1, pedro.figueiredo@muzzley.com)
 
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_AUX_DIR([.])
