--- a/.gitignore
+++ b/.gitignore
@@ -12,14 +12,14 @@ Makefile
 libtool
 config.log
 config.status
-aclocal.m4 
-compile 
-config.guess 
-config.sub 
-configure 
-depcomp 
-install-sh 
-ltmain.sh 
+aclocal.m4
+compile
+config.guess
+config.sub
+configure
+depcomp
+install-sh
+ltmain.sh
 missing
 *.deps
 *.dirstamp
@@ -27,3 +27,6 @@ missing
 */**/Makefile.in
 */**/.libs/
 */**/*.m4
+.sublime-workspace
+examples/myapp
+examples/myuser
