added HTTP(S) client methods to the library

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -1,2 +1,38 @@
 
-nobase_include_HEADERS = ./muzzley/base/assert.h ./muzzley/log/log.h ./muzzley/exceptions/CastException.h ./muzzley/exceptions/SyntaxErrorException.h ./muzzley/exceptions/ParserEOF.h ./muzzley/exceptions/AssertionException.h ./muzzley/exceptions/NoAttributeNameException.h ./muzzley/exceptions/ClosedException.h ./muzzley/exceptions/InterruptedException.h ./muzzley/parsers/JSONLexerimpl.h ./muzzley/parsers/JSONTokenizerbase.h ./muzzley/parsers/JSONinc.h ./muzzley/parsers/JSONParser.h ./muzzley/parsers/JSONTokenizerLexer.h ./muzzley/parsers/JSONLexerbase.h ./muzzley/parsers/JSONLexer.h ./muzzley/parsers/json.h ./muzzley/parsers/JSONTokenizer.h ./muzzley/parsers/JSONTokenizerimpl.h ./muzzley/text/convert.h ./muzzley/text/manip.h ./muzzley/stream/SocketStreams.h ./muzzley/muzzley.h ./muzzley/resource/Client.h ./muzzley/json/JSONObj.h
+nobase_include_HEADERS =\
+./muzzley/base/assert.h\
+./muzzley/log/log.h\
+./muzzley/exceptions/CastException.h\
+./muzzley/exceptions/SyntaxErrorException.h\
+./muzzley/exceptions/ParserEOF.h\
+./muzzley/exceptions/AssertionException.h\
+./muzzley/exceptions/NoAttributeNameException.h\
+./muzzley/exceptions/ClosedException.h\
+./muzzley/exceptions/InterruptedException.h\
+./muzzley/parsers/JSONLexerimpl.h\
+./muzzley/parsers/JSONTokenizerbase.h\
+./muzzley/parsers/JSONinc.h\
+./muzzley/parsers/JSONParser.h\
+./muzzley/parsers/JSONTokenizerLexer.h\
+./muzzley/parsers/JSONLexerbase.h\
+./muzzley/parsers/JSONLexer.h\
+./muzzley/parsers/json.h\
+./muzzley/parsers/JSONTokenizer.h\
+./muzzley/parsers/JSONTokenizerimpl.h\
+./muzzley/parsers/HTTPLexer.h \
+./muzzley/parsers/HTTPLexerbase.h \
+./muzzley/parsers/HTTPParser.h \
+./muzzley/parsers/HTTPTokenizer.h \
+./muzzley/parsers/HTTPTokenizerLexer.h \
+./muzzley/parsers/HTTPTokenizerbase.h \
+./muzzley/parsers/HTTPTokenizerimpl.h \
+./muzzley/parsers/HTTPinc.h \
+./muzzley/parsers/http.h \
+./muzzley/text/convert.h\
+./muzzley/text/manip.h\
+./muzzley/stream/SocketStreams.h\
+./muzzley/stream/SSLSocketStreams.h\
+./muzzley/muzzley.h\
+./muzzley/resource/Client.h\
+./muzzley/json/JSONObj.h \
+./muzzley/http/HTTPObj.h
