--- a/configure.ac
+++ b/configure.ac
@@ -9,14 +9,20 @@ AC_INIT(muzzley, 0.0.2, pedro.figueiredo@muzzley.com)
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_AUX_DIR([.])
 
+AC_ARG_ENABLE(http, [  --enable-http		Turn on HTTP(S) client support (OpenSSL development library needed) ],
+	[ AC_DEFINE(HAVE_HTTP_CLIENT, 1, "Turn on HTTP(S) client support - OpenSSL development library needed") ]
+)
+AC_ARG_ENABLE(logs, [  --enable-logs		Turn on log messages ],
+	[ AC_DEFINE(MUZZLEY_DEBUG, 1, "Turn on log messages") ]
+)
+
 dnl Check for libraries
 AC_HAVE_LIBRARY(pthread)
 
-dnl Check for header files
-AC_CONFIG_HEADERS([include/muzzley/config.h])
-AC_CHECK_HEADERS([openssl/ssl.h])
-
 AC_CANONICAL_SYSTEM
+
+dnl Create config.h header file
+AC_CONFIG_HEADERS([include/muzzley/config.h])
 
 dnl Initialize automake
 AM_INIT_AUTOMAKE([subdir-objects])
@@ -33,6 +39,6 @@ dnl Libtool is used for building share libraries
 AC_PROG_LIBTOOL
 
 AC_CONFIG_FILES(Makefile
-                include/Makefile
-                src/Makefile)
+	include/Makefile
+	src/Makefile)
 AC_OUTPUT
