added the possibility of disabling SSL/TLS support

--- a/configure.ac
+++ b/configure.ac
@@ -8,9 +8,12 @@ AC_INIT(muzzley, 0.0.2, pedro.figueiredo@muzzley.com)
 
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_AUX_DIR([.])
-
+	
 AC_ARG_ENABLE(http, [  --enable-http		Turn on HTTP(S) client support (OpenSSL development library needed) ],
 	[ AC_DEFINE(HAVE_HTTP_CLIENT, 1, "Turn on HTTP(S) client support - OpenSSL development library needed") ]
+)
+AC_ARG_ENABLE(ssl, [  --disable-ssl		Turn off SSL secure channel for real-time channel (OpenSSL development library needed) ],
+	[ AC_DEFINE(NOT_HAVE_SECURE_CHANNEL, 1, "Turn off SSL secure channel for real-time channel - OpenSSL development library needed") ]
 )
 AC_ARG_ENABLE(logs, [  --enable-logs		Turn on log messages ],
 	[ AC_DEFINE(MUZZLEY_DEBUG, 1, "Turn on log messages") ]
