minor changes in exception logging

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,14 @@
 language: cpp
-install: 
-    - sudo apt-get install -qq g++ build-essential autoconf libtool libssl-dev libssl1.0.0
+sudo: false
+addons:
+    apt:
+        packages:
+            - g++
+            - build-essential
+            - autoconf
+            - libtool
+            - libssl-dev
+            - libssl1.0.0
 before_script: 
     - autoreconf -vfi
 script: 
